feat: Function for calculating confidence interval

--- a/Assignment-2/training_and_testing.ipynb
+++ b/Assignment-2/training_and_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:55.302705Z",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:55.450034Z",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:55.483293Z",
@@ -51,7 +51,7 @@
        "\twith 250731 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:55.959522Z",
@@ -78,7 +78,7 @@
        "        24168, 24416, 24641]),)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:56.018779Z",
@@ -182,7 +182,7 @@
        "4  id12958  Finding nothing else, not even gold, the Super...    HPL"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:56.042403Z",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:56.123381Z",
@@ -222,7 +222,7 @@
        "['EAP', 'HPL', 'MWS']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:56.188467Z",
@@ -248,7 +248,7 @@
        "{'EAP': 0, 'HPL': 1, 'MWS': 2}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:56.255746Z",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:56.323114Z",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:56.442101Z",
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:56.548130Z",
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:56.992229Z",
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:57.063146Z",
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:33:58.150181Z",
@@ -519,7 +519,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13705/13705 [00:00<00:00, 17311.86it/s]\n"
+      "100%|██████████| 13705/13705 [00:00<00:00, 17118.57it/s]\n"
      ]
     }
    ],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:34:42.818754Z",
@@ -542,7 +542,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5874/5874 [00:44<00:00, 131.52it/s]\n"
+      "100%|██████████| 5874/5874 [00:39<00:00, 149.69it/s]\n"
      ]
     }
    ],
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:34:42.831772Z",
@@ -569,6 +569,23 @@
    "outputs": [],
    "source": [
     "from statistics import mean\n",
+    "import math\n",
+    "\n",
+    "def get_confidence_interval(score, number_of_samples):\n",
+    "    \"\"\"\n",
+    "    Parameter\n",
+    "    ------------\n",
+    "    score: score of the metric we find to find out confidence interval of\n",
+    "    number_of_samples: Number of samples\n",
+    "    \n",
+    "    Returns \n",
+    "    ------------\n",
+    "    Confidence interval\n",
+    "    \"\"\"\n",
+    "    CI_CONST = 1.96\n",
+    "    confidence_interval_upper = score + CI_CONST * math.sqrt((score*(1-score))/number_of_samples)\n",
+    "    confidence_interval_lower = score - CI_CONST * math.sqrt((score*(1-score))/number_of_samples)\n",
+    "    return [confidence_interval_lower, confidence_interval_upper]\n",
     "\n",
     "def generate_statistics(predictions, class_labels, labelMap):\n",
     "    \"\"\"\n",
@@ -619,9 +636,15 @@
     "    macro_specificity = mean(classwise_specificity)\n",
     "    macro_f_score = mean([(2*classwise_precision[i] * classwise_sensitivity[i]) / (classwise_precision[i] + classwise_sensitivity[i]) for i in range(num_classes)])\n",
     "    \n",
-    "    #     print(true_positive, true_negative, false_positive, false_negative)\n",
+    "    number_of_samples = len(predictions)\n",
+    "    macro_precision_ci = get_confidence_interval(macro_precision, number_of_samples)\n",
+    "    macro_sensitivity_ci = get_confidence_interval(macro_sensitivity, number_of_samples)\n",
+    "    macro_specificity_ci = get_confidence_interval(macro_specificity, number_of_samples)\n",
+    "    macro_f_score_ci = get_confidence_interval(macro_f_score, number_of_samples)\n",
+    "#     print(true_positive, true_negative, false_positive, false_negative)\n",
+    "#     print(number_of_samples)\n",
     "    \n",
-    "    print(\"MACRO STATS\")\n",
+    "    print(\"MICRO STATS\")\n",
     "    print(f\"Micro Precision = {micro_precision}\")\n",
     "    print(f\"Micro Sensitivity(Recall) = {micro_sensitivity}\")    \n",
     "    print(f\"Micro Specificity = {micro_specificity}\")    \n",
@@ -630,16 +653,16 @@
     "    \n",
     "    print(\"\\n****************\\n\")\n",
     "    print(\"MACRO STATS\")\n",
-    "    print(f\"Macro Precision = {macro_precision}\")\n",
-    "    print(f\"Macro Sensitivity(Recall) = {macro_sensitivity}\")    \n",
-    "    print(f\"Macro Specificity = {macro_specificity}\")    \n",
-    "    print(f\"Macro F-Score = {macro_f_score}\")    \n",
+    "    print(f\"Macro Precision = {macro_precision}, {macro_precision_ci}\")\n",
+    "    print(f\"Macro Sensitivity(Recall) = {macro_sensitivity}, {macro_sensitivity_ci}\")    \n",
+    "    print(f\"Macro Specificity = {macro_specificity}, {macro_specificity_ci}\")    \n",
+    "    print(f\"Macro F-Score = {macro_f_score}, {macro_f_score_ci}\")    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:34:43.000469Z",
@@ -650,10 +673,10 @@
     {
      "data": {
       "text/plain": [
-       "0.5812053115423902"
+       "0.5885257065032345"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:34:43.074417Z",
@@ -677,19 +700,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MACRO STATS\n",
-      "Micro Precision = 0.5812053115423902\n",
-      "Micro Sensitivity(Recall) = 0.5812053115423902\n",
-      "Micro Specificity = 0.7351421188630491\n",
-      "Micro F-Score = 0.5812053115423902\n",
+      "MICRO STATS\n",
+      "Micro Precision = 0.5885257065032345\n",
+      "Micro Sensitivity(Recall) = 0.5885257065032345\n",
+      "Micro Specificity = 0.7409709570249705\n",
+      "Micro F-Score = 0.5885257065032345\n",
       "\n",
       "****************\n",
       "\n",
       "MACRO STATS\n",
-      "Macro Precision = 0.7048327579569866\n",
-      "Macro Sensitivity(Recall) = 0.5379154364203398\n",
-      "Macro Specificity = 0.754056533900209\n",
-      "Macro F-Score = 0.5400075878886968\n"
+      "Macro Precision = 0.70153440127993, [0.6898323842128004, 0.7132364183470598]\n",
+      "Macro Sensitivity(Recall) = 0.5455080416028929, [0.5327743953575621, 0.5582416878482237]\n",
+      "Macro Specificity = 0.7572522567773409, [0.7462878033057502, 0.7682167102489316]\n",
+      "Macro F-Score = 0.5488136239457543, [0.5360879869433933, 0.5615392609481152]\n"
      ]
     }
    ],
@@ -708,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:34:43.142296Z",
@@ -731,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:34:44.310382Z",
@@ -743,7 +766,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13705/13705 [00:00<00:00, 16617.41it/s]\n"
+      "100%|██████████| 13705/13705 [00:00<00:00, 18532.94it/s]\n"
      ]
     }
    ],
@@ -753,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:35:29.393949Z",
@@ -765,7 +788,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5874/5874 [00:45<00:00, 130.31it/s]\n"
+      "100%|██████████| 5874/5874 [00:41<00:00, 142.50it/s]\n"
      ]
     }
    ],
@@ -775,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:35:29.398423Z",
@@ -786,10 +809,10 @@
     {
      "data": {
       "text/plain": [
-       "0.7938372488934287"
+       "0.783792986040177"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:35:29.567353Z",
@@ -812,19 +835,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MACRO STATS\n",
-      "Micro Precision = 0.7938372488934287\n",
-      "Micro Sensitivity(Recall) = 0.7938372488934287\n",
-      "Micro Specificity = 0.8850716522729429\n",
-      "Micro F-Score = 0.7938372488934287\n",
+      "MICRO STATS\n",
+      "Micro Precision = 0.783792986040177\n",
+      "Micro Sensitivity(Recall) = 0.783792986040177\n",
+      "Micro Specificity = 0.8787936629127696\n",
+      "Micro F-Score = 0.783792986040177\n",
       "\n",
       "****************\n",
       "\n",
       "MACRO STATS\n",
-      "Macro Precision = 0.8382842635101704\n",
-      "Macro Sensitivity(Recall) = 0.7761969346628379\n",
-      "Macro Specificity = 0.8816878677250759\n",
-      "Macro F-Score = 0.7913359660826251\n"
+      "Macro Precision = 0.8310914420531165, [0.8215098134613498, 0.8406730706448832]\n",
+      "Macro Sensitivity(Recall) = 0.7633631898637615, [0.7524940329518034, 0.7742323467757196]\n",
+      "Macro Specificity = 0.8751469128281495, [0.8666935555336789, 0.8836002701226201]\n",
+      "Macro F-Score = 0.7798771438366304, [0.7692813190989893, 0.7904729685742715]\n"
      ]
     }
    ],
@@ -835,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:35:29.636284Z",
@@ -854,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-10-19T07:35:29.704317Z",
@@ -892,7 +915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
