refactor: Confidence interval for only accuracy

--- a/Assignment-2/training_and_testing.ipynb
+++ b/Assignment-2/training_and_testing.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:33:55.302705Z",
-     "start_time": "2021-10-19T07:33:54.223862Z"
+     "end_time": "2021-10-20T05:20:09.079387Z",
+     "start_time": "2021-10-20T05:19:52.172048Z"
     }
    },
    "outputs": [],
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:33:55.450034Z",
-     "start_time": "2021-10-19T07:33:55.305142Z"
+     "end_time": "2021-10-20T05:20:09.298860Z",
+     "start_time": "2021-10-20T05:20:09.088261Z"
     }
    },
    "outputs": [
@@ -49,7 +49,7 @@
        "\twith 250731 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,11 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:33:56.018779Z",
-     "start_time": "2021-10-19T07:33:55.962003Z"
+     "end_time": "2021-10-20T05:20:16.352378Z",
+     "start_time": "2021-10-20T05:20:09.304503Z"
     }
    },
    "outputs": [
@@ -142,7 +142,7 @@
        "4  id12958  Finding nothing else, not even gold, the Super...    HPL"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,11 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:33:56.123381Z",
-     "start_time": "2021-10-19T07:33:56.048829Z"
+     "end_time": "2021-10-20T05:20:20.976804Z",
+     "start_time": "2021-10-20T05:20:16.353589Z"
     }
    },
    "outputs": [
@@ -179,11 +179,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:33:56.188467Z",
-     "start_time": "2021-10-19T07:33:56.125746Z"
+     "end_time": "2021-10-20T05:20:23.346159Z",
+     "start_time": "2021-10-20T05:20:20.978672Z"
     }
    },
    "outputs": [
@@ -205,11 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:33:56.323114Z",
-     "start_time": "2021-10-19T07:33:56.257586Z"
+     "end_time": "2021-10-20T05:20:23.749185Z",
+     "start_time": "2021-10-20T05:20:23.348061Z"
     }
    },
    "outputs": [],
@@ -223,11 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:33:56.255746Z",
-     "start_time": "2021-10-19T07:33:56.190080Z"
+     "end_time": "2021-10-20T05:20:24.025190Z",
+     "start_time": "2021-10-20T05:20:23.752022Z"
     }
    },
    "outputs": [],
@@ -252,11 +252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:33:56.548130Z",
-     "start_time": "2021-10-19T07:33:56.444560Z"
+     "end_time": "2021-10-20T05:20:24.876199Z",
+     "start_time": "2021-10-20T05:20:24.031408Z"
     }
    },
    "outputs": [],
@@ -447,11 +447,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:34:42.831772Z",
-     "start_time": "2021-10-19T07:34:42.821562Z"
+     "end_time": "2021-10-20T05:20:25.569867Z",
+     "start_time": "2021-10-20T05:20:24.878356Z"
     }
    },
    "outputs": [],
@@ -536,23 +536,23 @@
     "    print(f\"Micro Specificity = {micro_specificity}\")    \n",
     "    print(f\"Micro F-Score = {micro_f_score}\")    \n",
     "    \n",
-    "    \n",
     "    print(\"\\n****************\\n\")\n",
+    "    \n",
     "    print(\"MACRO STATS\")\n",
-    "    print(f\"Macro Precision = {macro_precision}, Confidence Interval = {macro_precision_ci}\")\n",
-    "    print(f\"Macro Sensitivity(Recall) = {macro_sensitivity}, Confidence Interval = {macro_sensitivity_ci}\")    \n",
-    "    print(f\"Macro Specificity = {macro_specificity}, Confidence Interval = {macro_specificity_ci}\")    \n",
-    "    print(f\"Macro F-Score = {macro_f_score}, Confidence Interval = {macro_f_score_ci}\")    \n",
+    "    print(f\"Macro Precision = {macro_precision}\")\n",
+    "    print(f\"Macro Sensitivity(Recall) = {macro_sensitivity}\")    \n",
+    "    print(f\"Macro Specificity = {macro_specificity}\")    \n",
+    "    print(f\"Macro F-Score = {macro_f_score}\")    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:33:56.992229Z",
-     "start_time": "2021-10-19T07:33:56.549998Z"
+     "end_time": "2021-10-20T05:20:26.031776Z",
+     "start_time": "2021-10-20T05:20:25.579338Z"
     }
    },
    "outputs": [],
@@ -562,11 +562,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:33:57.063146Z",
-     "start_time": "2021-10-19T07:33:56.995111Z"
+     "end_time": "2021-10-20T05:20:26.327559Z",
+     "start_time": "2021-10-20T05:20:26.034480Z"
     }
    },
    "outputs": [],
@@ -589,11 +589,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:33:58.150181Z",
-     "start_time": "2021-10-19T07:33:57.068742Z"
+     "end_time": "2021-10-20T05:20:27.424520Z",
+     "start_time": "2021-10-20T05:20:26.333440Z"
     },
     "scrolled": false
    },
@@ -602,7 +602,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13705/13705 [00:00<00:00, 18095.84it/s]\n"
+      "100%|██████████| 13705/13705 [00:00<00:00, 19326.62it/s]\n"
      ]
     }
    ],
@@ -612,11 +612,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:34:42.818754Z",
-     "start_time": "2021-10-19T07:33:58.151539Z"
+     "end_time": "2021-10-20T05:21:16.525059Z",
+     "start_time": "2021-10-20T05:20:27.426239Z"
     },
     "scrolled": true
    },
@@ -625,7 +625,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5874/5874 [00:38<00:00, 150.70it/s]\n"
+      "100%|██████████| 5874/5874 [00:49<00:00, 119.65it/s]\n"
      ]
     }
    ],
@@ -635,21 +635,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:34:43.000469Z",
-     "start_time": "2021-10-19T07:34:42.834687Z"
+     "end_time": "2021-10-20T05:21:16.531148Z",
+     "start_time": "2021-10-20T05:21:16.527227Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5823970037453183"
+       "0.5881852230166837"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,11 +660,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:34:43.074417Z",
-     "start_time": "2021-10-19T07:34:43.006423Z"
+     "end_time": "2021-10-20T05:21:17.060851Z",
+     "start_time": "2021-10-20T05:21:16.533064Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.5755989508680747, 0.6007714951652928]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_of_samples = len(NBClassifier.predictions)\n",
+    "confidence_interval = get_confidence_interval(NBClassifier.accuracy, number_of_samples)\n",
+    "confidence_interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-20T05:21:17.241289Z",
+     "start_time": "2021-10-20T05:21:17.066440Z"
     },
     "scrolled": true
    },
@@ -674,18 +701,18 @@
      "output_type": "stream",
      "text": [
       "MICRO STATS\n",
-      "Micro Precision = 0.5823970037453183\n",
-      "Micro Sensitivity(Recall) = 0.5823970037453183\n",
-      "Micro Specificity = 0.736094674556213\n",
-      "Micro F-Score = 0.5823970037453183\n",
+      "Micro Precision = 0.5881852230166837\n",
+      "Micro Sensitivity(Recall) = 0.5881852230166837\n",
+      "Micro Specificity = 0.7407010397684639\n",
+      "Micro F-Score = 0.5881852230166837\n",
       "\n",
       "****************\n",
       "\n",
       "MACRO STATS\n",
-      "Macro Precision = 0.6963928079200419, Confidence Interval = [0.6846337571214026, 0.7081518587186811]\n",
-      "Macro Sensitivity(Recall) = 0.5416487165452283, Confidence Interval = [0.5289064353340497, 0.5543909977564069]\n",
-      "Macro Specificity = 0.7528085415244022, Confidence Interval = [0.7417766978457145, 0.7638403852030899]\n",
-      "Macro F-Score = 0.543412172443183, Confidence Interval = [0.5306737412357712, 0.5561506036505948]\n"
+      "Macro Precision = 0.707326296762176\n",
+      "Macro Sensitivity(Recall) = 0.5446870666401318\n",
+      "Macro Specificity = 0.7581278620492882\n",
+      "Macro F-Score = 0.5472638202615497\n"
      ]
     }
    ],
@@ -703,29 +730,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-10-19T07:34:43.142296Z",
-     "start_time": "2021-10-19T07:34:43.077138Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# for alpha in [0.01,0.1,1,10,100]:\n",
-    "#     NBClassifier.apply_laplace_correction(alpha)\n",
-    "#     print(f\"{NBClassifier.test()} <== {alpha}\")\n",
-    "\n",
-    "# alpha  |   %accuracy\n",
-    "# 0.01 ------ 83\n",
-    "# 0.1 ------- 83\n",
-    "# 1 --------- 77-79\n",
-    "# 10 -------- 41\n",
-    "# 100 ------- 39"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -734,11 +738,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:34:44.310382Z",
-     "start_time": "2021-10-19T07:34:43.144364Z"
+     "end_time": "2021-10-20T05:21:18.517700Z",
+     "start_time": "2021-10-20T05:21:17.243489Z"
     }
    },
    "outputs": [
@@ -746,7 +750,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13705/13705 [00:00<00:00, 16708.43it/s]\n"
+      "100%|██████████| 13705/13705 [00:00<00:00, 16763.13it/s]\n"
      ]
     }
    ],
@@ -756,11 +760,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:35:29.393949Z",
-     "start_time": "2021-10-19T07:34:44.311915Z"
+     "end_time": "2021-10-20T05:22:15.071873Z",
+     "start_time": "2021-10-20T05:21:18.519844Z"
     }
    },
    "outputs": [
@@ -768,7 +772,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5874/5874 [00:39<00:00, 148.19it/s]\n"
+      "100%|██████████| 5874/5874 [00:56<00:00, 103.88it/s]\n"
      ]
     }
    ],
@@ -778,21 +782,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:35:29.398423Z",
-     "start_time": "2021-10-19T07:35:29.395737Z"
+     "end_time": "2021-10-20T05:22:15.075523Z",
+     "start_time": "2021-10-20T05:22:15.073180Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7827715355805244"
+       "0.7892407218249915"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,11 +807,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-19T07:35:29.567353Z",
-     "start_time": "2021-10-19T07:35:29.399553Z"
+     "end_time": "2021-10-20T05:22:16.010256Z",
+     "start_time": "2021-10-20T05:22:15.077570Z"
     }
    },
    "outputs": [
@@ -816,24 +820,51 @@
      "output_type": "stream",
      "text": [
       "MICRO STATS\n",
-      "Micro Precision = 0.7827715355805244\n",
-      "Micro Sensitivity(Recall) = 0.7827715355805244\n",
-      "Micro Specificity = 0.8781512605042017\n",
-      "Micro F-Score = 0.7827715355805244\n",
+      "Micro Precision = 0.7892407218249915\n",
+      "Micro Sensitivity(Recall) = 0.7892407218249915\n",
+      "Micro Specificity = 0.8822074215033302\n",
+      "Micro F-Score = 0.7892407218249915\n",
       "\n",
       "****************\n",
       "\n",
       "MACRO STATS\n",
-      "Macro Precision = 0.8270659793801374, Confidence Interval = [0.8173943555188802, 0.8367376032413946]\n",
-      "Macro Sensitivity(Recall) = 0.7633161088548378, Confidence Interval = [0.7524462059589827, 0.7741860117506929]\n",
-      "Macro Specificity = 0.8746858851170974, Confidence Interval = [0.8662191659495444, 0.8831526042846505]\n",
-      "Macro F-Score = 0.7788004841257993, Confidence Interval = [0.7681861124061036, 0.789414855845495]\n"
+      "Macro Precision = 0.83412023119829\n",
+      "Macro Sensitivity(Recall) = 0.7705625414597101\n",
+      "Macro Specificity = 0.8788137016138269\n",
+      "Macro F-Score = 0.7864081731595802\n"
      ]
     }
    ],
    "source": [
     "predictions = NBClassifier.predictions\n",
     "generate_statistics(predictions, class_labels, labelMap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-20T05:22:16.662499Z",
+     "start_time": "2021-10-20T05:22:16.014885Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.7788106525233968, 0.7996707911265862]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_of_samples = len(NBClassifier.predictions)\n",
+    "confidence_interval = get_confidence_interval(NBClassifier.accuracy, number_of_samples)\n",
+    "confidence_interval"
    ]
   }
  ],
@@ -853,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
